@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST dexml-0.4.1.tar.gz 18002 RMD160 a7dd3a73f3ae4863b34974e333499e0f8472ffea SHA1 eef031e8e60db9745f6f65b540481defb215fcc9 SHA256 d13b1986c92c0f26e973ff7c8234bc399d3f577cad689d5053d14514035b64a4
 DIST dexml-0.4.2.tar.gz 23731 RMD160 c7c5b322e6f8d1f86bd5b06bb0f3ce2fc75bfae7 SHA1 83cc0ee4c48142a5c1452e83cdf55b97d4a3aace SHA256 71f7100a67f766eb47689131e2acfb9e19c190d20885f5928cded88d0a3602ea
-EBUILD dexml-0.4.1.ebuild 410 RMD160 1b0e227fa7ce7244b7dd86a9a72f2cc3ddf3b754 SHA1 635a1c6c8a3a90acaf3a93cfbc40d96610ce1df2 SHA256 47f767d53a69d7fc9006be5b4d206b393dfe4727143e99c09400c4040625723e
-EBUILD dexml-0.4.2.ebuild 411 RMD160 6d379bfe444388e718a83528ff03c1d5056064a4 SHA1 ae5998eaf8bde7f9f00cc31c937e6375c041c273 SHA256 327a627bca982049e2a20f902651814391e11ca7f3570fea115486be865662a0
-MISC ChangeLog 3120 RMD160 414b7669ebb07225ad2b139de9f06d78bc94912c SHA1 7da45862566dde4ddb2c3565cfc2b06f0dbfab34 SHA256 c17aa372d171839a706a6dacf6afa2b064dde9b0047f3f17a37f8bb2bfbd20c1
+EBUILD dexml-0.4.2.ebuild 410 RMD160 1b0e227fa7ce7244b7dd86a9a72f2cc3ddf3b754 SHA1 635a1c6c8a3a90acaf3a93cfbc40d96610ce1df2 SHA256 47f767d53a69d7fc9006be5b4d206b393dfe4727143e99c09400c4040625723e
+MISC ChangeLog 3226 RMD160 346dd553a62d162e9ad6a0df5c9d5c2d8e9c41d1 SHA1 cd2e2f825334674da38bd2450ba2ebd3d48314d4 SHA256 b4229acb7a71b1af438472cf99b8a743aeea75374e031f9d71ec942fda65d7f1
 MISC metadata.xml 1056 RMD160 5770244611aa58985d26a6a9a704a0e324abfe72 SHA1 4bdd28b476af451fc1d18887781b5dbbb8fb915c SHA256 302a6188b5af269340122b5603ccec73f075bfcf0280e71b06a9a38e89eb8b6f
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk34YgkACgkQzJrj3cAXR0nfDgCfcw1cvgweQWz5UTpw4oHCdwfr
-RKYAn3CSba8ThShaWqAww90ggYiVysyy
-=9oN5
+iEYEARECAAYFAk34avEACgkQzJrj3cAXR0mv8QCeP3lzbA7kWrP+2gY1KoZQgxn2
+Vv8An1qIeE9ifNnODsNx5eXAYuCDCp6Z
+=kfvS
 -----END PGP SIGNATURE-----
